# taller

./: README.md  pyproject.toml
api/: README.md
app/: Dockerfile  README.md  pyproject.toml
modelo/: Modelo.ipynb  README.md
modelo/api/: Dockerfile.dockerfile  Modelo.ipynb  main.ipynb
modelo/app/: Dockerfile.dockerfile  app.ipynb
